--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -10,6 +10,13 @@
     "sourceType": "module"
   },
   "rules": {
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "operator-linebreak": 0,
+    "object-curly-newline": [
+      "error",
+      {
+        "ObjectPattern": { "multiline": true }
+      }
+    ]
   }
 }
